[package]
name = "torst"
version = "0.1.0"
authors = ["Ali Mecerhed <mcrhd.ali@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "^0.2"
rust-crypto = "0.2.36"
bytes = "0.5.4"
tokio = "0.2"
reqwest = "0.10"
url = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.5"
byteorder = "1"